(fix): Enhance date-time component spacing and show time format am/pm

--- a/src/components/inputs/date/ohri-date.scss
+++ b/src/components/inputs/date/ohri-date.scss
@@ -25,6 +25,10 @@
 .formField :global(.bx--label--disabled) {
   margin-left: 5rem;
 }
+.timePicker {
+  width: 6.57rem;
+  padding-left: 0.2rem;
+}
 
 .row {
   display: flex;
